# sc-tools

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  cabal.project  changelog.md  fix-cabal-fmt.sh  fix-fourmolu.sh  fix-stylish-haskell.sh  flake.nix  fourmolu.yaml  start-node-mainnet.sh  start-node-preprod.sh
docs/: architecture.md  index.md
nix/: outputs.nix  project.nix  shell.nix
node-config/: .gitignore  mainnet-shelley-genesis.json  (+1 more)
src/: coin-selection.cabal  convex-coin-selection.cabal
src/base/: convex-base.cabal  convx-base.cabal
src/base/lib/Convex/: BuildTx.hs  CardanoApi.hs  Class.hs  Constants.hs  Eon.hs  Eras.hs  Event.hs  FullTx.hs  Lenses.hs  Measures.hs  MonadLog.hs  NodeParams.hs  NodeQueries.hs  OnChainState.hs  PlutusLedger.hs  PlutusTx.hs  Profiling.hs  ResolvedTx.hs  Scripts.hs  Utils.hs  UtxoMod.hs  Utxos.hs
src/base/lib/Convex/BuildTx/: BodyContentResolved.hs  Error.hs
src/base/lib/Convex/NodeQueries/: Debug.hs
src/base/lib/Convex/PlutusLedger/: V1.hs  V3.hs
src/base/lib/Convex/Utils/: String.hs
src/base/test/Convex/: PlutusLedgerSpec.hs
src/blockfrost/: convex-blockfrost.cabal
src/blockfrost/lib/Convex/: Blockfrost.hs
src/blockfrost/lib/Convex/Blockfrost/: API.hs  MonadBlockchain.hs  Orphans.hs  ResolveTx.hs  Types.hs
src/blockfrost/test/: Spec.hs  Unit.hs
src/coin-selection/: convex-coin-selection.cabal
src/coin-selection/exe/: Main.hs
src/coin-selection/lib/Cardano/Api/: Extras.hs
src/coin-selection/lib/Convex/: BuildTx.hs  CoinSelection.hs  Query.hs  UTxOCompatibility.hs
src/coin-selection/lib/Convex/CoinSelection/: CardanoApi.hs  Class.hs
src/coin-selection/lib/Convex/MockChain/: CoinSelection.hs  Staking.hs
src/coin-selection/test/: Scripts.hs  Spec.hs
src/coin-selection/test/Scripts/: MatchingIndex.hs
src/devnet/: convex-devnet.cabal
src/devnet/config/devnet/: cardano-node.json  genesis-alonzo.json  genesis-conway.json  genesis-shelley.json
src/devnet/lib/Convex/Devnet/: CardanoNode.hs  Logging.hs  NodeQueries.hs  Utils.hs  Wallet.hs  WalletServer.hs
src/devnet/lib/Convex/Devnet/CardanoNode/: Types.hs
src/devnet/test/: Spec.hs
src/devnet/test/Devnet/Test/: LatestEraTransitionSpec.hs
src/devnet/test/Devnet/Test/LatestEraTransitionSpec/: PV2.hs  PV3.hs
src/dex/muesli/muesli-core/: convex-muesli-core.cabal
src/dex/muesli/muesli-core/lib/Convex/Muesli/LP/: BuildTx.hs  Constants.hs  Types.hs
src/dex/muesli/muesli-core/lib/Convex/Muesli/LP/OnChain/: Types.hs
src/dex/muesli/muesli-core/lib/Convex/Muesli/Orderbook/: Constants.hs  Contract.hs  KnownOrder.hs  Match.hs
src/dex/muesli/muesli-core/test/: Spec.hs
src/dex/muesli/muesli-node-client/: convex-muesli-node-client.cabal
src/dex/muesli/muesli-node-client/lib/Convex/Muesli/Orderbook/: NodeClient.hs
src/exe/: Main.hs
src/lenses/: convex-lenses.cabal
src/lenses/lib/Convex/: Lenses.hs
src/lib/: CoinSelection.hs
src/lib/Convex/: CoinSelection.hs
src/maestro/: convex-maestro.cabal
src/maestro/lib/Convex/: Maestro.hs
src/maestro/lib/Convex/Maestro/: MonadBlockchain.hs  Orphans.hs  Types.hs
src/maestro/test/: Spec.hs  Unit.hs
src/mockchain/: convex-mockchain.cabal
src/mockchain/lib/Convex/: Era.hs  MockChain.hs  NodeParams.hs
src/mockchain/lib/Convex/MockChain/: Class.hs  Defaults.hs  Gen.hs  Sketch.hs  Utils.hs  Wallet.hs  Wallets.hs
src/muesli-core/: convex-muesli-core.cabal
src/muesli-core/lib/Convex/Muesli/: Constants.hs  Contract.hs  KnownOrder.hs  Match.hs
src/muesli-core/lib/Convex/Muesli/LP/: Constants.hs  Types.hs
src/muesli-core/lib/Convex/Muesli/LP/OnChain/: Coin.hs  NFT.hs  OnChainUtils.hs
src/muesli-core/lib/Convex/Muesli/Orderbook/: Constants.hs  KnownOrder.hs
src/muesli-matcher/: convex-muesli-matcher.cabal
src/muesli-matcher/app/: Main.hs
src/muesli-matcher/lib/Convex/Muesli/: Cli.hs  NodeClient.hs
src/muesli-matcher/lib/Convex/Muesli/Cli/: Command.hs  Config.hs
src/muesli-node-client/: convex-muesli-node-client.cabal
src/muesli-node-client/app/lp/: Main.hs
src/muesli-node-client/app/orderbook/: Main.hs
src/muesli-node-client/lib/Convex/Muesli/LP/: Cli.hs  NodeClient.hs  Prices.hs  Stats.hs
src/muesli-node-client/lib/Convex/Muesli/LP/Cli/: Command.hs  Config.hs
src/muesli-node-client/lib/Convex/Muesli/Orderbook/: Cli.hs
src/muesli-node-client/lib/Convex/Muesli/Orderbook/Cli/: Command.hs  Config.hs
src/node-client/: convex-node-client.cabal
src/node-client/lib/Convex/NodeClient/: ChainTip.hs  Event.hs  Fold.hs  Progress.hs  Resuming.hs  Types.hs  WaitForTxnClient.hs
src/optics/: convex-optics.cabal
src/optics/lib/Convex/: CardanoApi.hs  Lenses.hs  Scripts.hs
src/optics/lib/Convex/CardanoApi/: Lenses.hs
src/optics/lib/Convex/PlutusLedgerApi/: Optics.hs
src/plutarch/: convex-plutarch.cabal
src/plutarch/lib/Convex/: Plutarch.hs  TestUtils.hs
src/plutarch/test/: Spec.hs
src/trading-bot/: convex-trading-bot.cabal
src/trading-bot/app/: Main.hs
src/trading-bot/lib/Convex/: TradingBot.hs
src/trading-bot/lib/Convex/TradingBot/: Annealing.hs  Cli.hs  LPPoolEvent.hs  NodeClient.hs  Portfolio.hs  Prices.hs  Rules.hs  Stats.hs
src/trading-bot/lib/Convex/TradingBot/Cli/: Command.hs  Config.hs
src/trading-bot/lib/Convex/TradingBot/NodeClient/: BacktestingClient.hs  OrderClient.hs  PricesClient.hs  TradingClient.hs
src/tx-mod/: convex-tx-mod.cabal
src/tx-mod/exe/: Main.hs
src/tx-mod/lib/Convex/TxMod/: Cli.hs  Command.hs  Env.hs  Logging.hs
src/un-ada/: README.md  big-address-problem.md  un-ada.cabal
src/un-ada/lib/UnAda/OffChain/: Scripts.hs  Transaction.hs  Value.hs
src/un-ada/lib/UnAda/OnChain/: MintingPolicy.hs  Types.hs  Validator.hs
src/un-ada/test/: Spec.hs
src/un-ada/test/UnAda/Test/: UnitTest.hs
src/wallet/: convex-wallet.cabal
src/wallet/app/: Main.hs
src/wallet/lib/Convex/: Wallet.hs
src/wallet/lib/Convex/Wallet/: API.hs  Cli.hs  MockWallet.hs  NodeClient.hs  Operator.hs  Utxos.hs  WalletState.hs
src/wallet/lib/Convex/Wallet/Cli/: Command.hs  Config.hs
src/wallet/lib/Convex/Wallet/NodeClient/: BalanceClient.hs
(+16 files in other folders)
