cabal-version: 3.0
name:          coin-selection
version:       0.0.0.1
synopsis:      Coin selection algorithm for Cardano transactions
license: Apache-2.0
license-files:
  LICENSE

maintainer:    j-mueller@users.noreply.github.com
author:        Jann Müller
homepage:      https://github.com/cardano-convex/coin-selection
bug-reports:   https://github.com/cardano-convex/coin-selection
description:
  Please see the README on GitHub at <https://github.com/cardano-convex/coin-selection>

build-type:    Simple

common lang
    default-language: Haskell2010
    default-extensions: ExplicitForAll ScopedTypeVariables MultiParamTypeClasses
                        DeriveGeneric StandaloneDeriving DeriveLift FlexibleContexts
                        GeneralizedNewtypeDeriving DeriveFunctor DeriveFoldable
                        DeriveTraversable ImportQualifiedPost
    ghc-options: -Wall -Wnoncanonical-monad-instances -Wunused-packages
                 -Wincomplete-uni-patterns -Wincomplete-record-updates
                 -Wredundant-constraints -Widentities

library
    import: lang
    exposed-modules:
      CoinSelection
    hs-source-dirs: lib
    build-depends:
      base