cabal-version: 3.0
name:          convex-base
version:       0.3.0.0
synopsis:      Base classes and types for working with cardano-api transactions
license: Apache-2.0
license-files:
  LICENSE

maintainer:    j-mueller@users.noreply.github.com
author:        Jann Müller
homepage:      https://github.com/j-mueller/sc-tools
bug-reports:   https://github.com/j-mueller/sc-tools
description:
  Please see the README on GitHub at <https://github.com/j-mueller/sc-tools>

build-type:    Simple

common lang
    default-language: Haskell2010
    default-extensions: ExplicitForAll ScopedTypeVariables MultiParamTypeClasses
                        DeriveGeneric StandaloneDeriving DeriveLift FlexibleContexts
                        GeneralizedNewtypeDeriving DeriveFunctor DeriveFoldable
                        DeriveTraversable ImportQualifiedPost NumericUnderscores
    ghc-options: -Wall -Wnoncanonical-monad-instances -Wunused-packages
                 -Wincomplete-uni-patterns -Wincomplete-record-updates
                 -Wredundant-constraints -Widentities

library
    import: lang
    exposed-modules:
      Convex.BuildTx
      Convex.Class
      Convex.Constants
      Convex.MonadLog
      Convex.NodeQueries
      Convex.NodeParams
      Convex.PlutusLedger
      Convex.PlutusTx
      Convex.Utils
      Convex.Utxos
    hs-source-dirs: lib
    build-depends:
      base >= 4.14 && < 4.20,
      lens,
      containers,
      aeson,
      mtl,
      katip,
      prettyprinter,
      transformers,
      text,
      exceptions,
      time,
      either-result,
      primitive,
      QuickCheck

    build-depends:
      convex-optics,

      cardano-api == 9.4.0.0,
      cardano-ledger-core,
      cardano-crypto-wrapper,

      cardano-ledger-byron,
      cardano-ledger-mary,
      cardano-ledger-shelley,
      cardano-ledger-babbage,
      cardano-ledger-alonzo,
      cardano-ledger-conway,

      ouroboros-consensus,
      ouroboros-consensus-cardano,
      ouroboros-network-protocols,
      cardano-slotting,
      plutus-tx,
      plutus-ledger-api,
      serialise,
      bytestring,
      dlist,
      either-result,
      strict-sop-core
