cabal-version: 3.4
name:          convex-base
version:       0.3.0.0
synopsis:
  Base classes and types for working with cardano-api transactions

license:       Apache-2.0
license-files: LICENSE
maintainer:    j-mueller@users.noreply.github.com
author:        Jann Müller
homepage:      https://github.com/j-mueller/sc-tools
bug-reports:   https://github.com/j-mueller/sc-tools
description:
  Please see the README on GitHub at <https://github.com/j-mueller/sc-tools>

build-type:    Simple

common lang
  default-language:   Haskell2010
  default-extensions:
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    ExplicitForAll
    FlexibleContexts
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    MultiParamTypeClasses
    NumericUnderscores
    ScopedTypeVariables
    StandaloneDeriving

  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wunused-packages
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities

library
  import:          lang
  exposed-modules:
    Convex.BuildTx
    Convex.Class
    Convex.Constants
    Convex.Eon
    Convex.MonadLog
    Convex.NodeParams
    Convex.NodeQueries
    Convex.NodeQueries.Debug
    Convex.PlutusLedger.V1
    Convex.PlutusLedger.V3
    Convex.PlutusTx
    Convex.ResolvedTx
    Convex.Utils
    Convex.UtxoMod
    Convex.Utxos

  hs-source-dirs:  lib
  build-depends:
    , aeson
    , base           >=4.14 && <4.20
    , containers
    , either-result
    , exceptions
    , katip
    , lens
    , mtl
    , prettyprinter
    , primitive
    , QuickCheck
    , text
    , time
    , transformers

  build-depends:
    , base16-bytestring
    , bytestring
    , cardano-api                  ==10.1.0.0
    , cardano-binary
    , cardano-crypto-class
    , cardano-crypto-wrapper
    , cardano-ledger-alonzo
    , cardano-ledger-babbage
    , cardano-ledger-byron
    , cardano-ledger-conway
    , cardano-ledger-core
    , cardano-ledger-mary
    , cardano-ledger-shelley
    , cardano-slotting
    , convex-optics
    , dlist
    , either-result
    , graphviz
    , ouroboros-consensus
    , ouroboros-consensus-cardano
    , ouroboros-network-protocols
    , plutus-ledger-api
    , plutus-tx
    , serialise
    , strict-sop-core

test-suite convex-base-test
  import:             lang
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Spec.hs
  other-modules:      Convex.PlutusLedgerSpec
  build-tool-depends: tasty-discover:tasty-discover

  -- Local dependencies
  build-depends:      convex-base

  -- CHaP dependencies
  build-depends:
    , cardano-api
    , cardano-api:gen

  -- Hackage dependencies
  build-depends:
    , base                 >=4.14.0
    , hedgehog-quickcheck
    , QuickCheck
    , tasty
    , tasty-quickcheck
