cabal-version: 3.0
name:          convex-coin-selection
version:       0.0.1
synopsis:      Coin selection algorithm for Cardano transactions
license: Apache-2.0
license-files:
  LICENSE

maintainer:    j-mueller@users.noreply.github.com
author:        Jann Müller
homepage:      https://github.com/j-mueller/sc-tools
bug-reports:   https://github.com/j-mueller/sc-tools
description:
  Please see the README on GitHub at <https://github.com/j-mueller/sc-tools>

build-type:    Simple

common lang
    default-language: Haskell2010
    default-extensions: ExplicitForAll ScopedTypeVariables MultiParamTypeClasses
                        DeriveGeneric StandaloneDeriving DeriveLift FlexibleContexts
                        GeneralizedNewtypeDeriving DeriveFunctor DeriveFoldable
                        DeriveTraversable ImportQualifiedPost NumericUnderscores
    ghc-options: -Wall -Wnoncanonical-monad-instances -Wunused-packages
                 -Wincomplete-uni-patterns -Wincomplete-record-updates
                 -Wredundant-constraints -Widentities

library
    import: lang
    exposed-modules:
      Convex.BuildTx
      Convex.CoinSelection
      Convex.MockChain.CoinSelection
    hs-source-dirs: lib
    build-depends:
      base >= 4.14.0,
      containers >= 0.6.5,
      lens,
      convex-base,
      convex-mockchain,
      convex-wallet,

    -- cardano dependencies
    build-depends:
      cardano-api,
      cardano-ledger-core -any,
      plutus-ledger-api,
      cardano-slotting

test-suite convex-coin-selection-test
  import: lang
  type: exitcode-stdio-1.0
  hs-source-dirs:     test
  ghc-options: -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-specialise
  main-is:
    Spec.hs
  other-modules:
    Scripts
  build-depends:
    base >= 4.14.0,
    tasty,
    tasty-hunit,
    lens,
    cardano-ledger-alonzo,
    convex-coin-selection,
    convex-mockchain,
    convex-base,
    convex-wallet,
    cardano-api,
    containers,
    plutus-ledger-api:{plutus-ledger-api, plutus-ledger-api-testlib},
    plutus-ledger-api,
    cardano-ledger-core,
    mtl