cabal-version: 3.0
name:          convex-coin-selection
version:       0.3.0.0
synopsis:      Coin selection algorithm for Cardano transactions
license: Apache-2.0
license-files:
  LICENSE

maintainer:    j-mueller@users.noreply.github.com
author:        Jann Müller
homepage:      https://github.com/j-mueller/sc-tools
bug-reports:   https://github.com/j-mueller/sc-tools
description:
  Please see the README on GitHub at <https://github.com/j-mueller/sc-tools>

build-type:    Simple

common lang
    default-language: Haskell2010
    default-extensions: ExplicitForAll ScopedTypeVariables MultiParamTypeClasses
                        DeriveGeneric StandaloneDeriving DeriveLift FlexibleContexts
                        GeneralizedNewtypeDeriving DeriveFunctor DeriveFoldable
                        DeriveTraversable ImportQualifiedPost NumericUnderscores
    ghc-options: -Wall -Wnoncanonical-monad-instances -Wunused-packages
                 -Wincomplete-uni-patterns -Wincomplete-record-updates
                 -Wredundant-constraints -Widentities

library
    import: lang
    exposed-modules:
      Convex.CoinSelection
      Convex.CoinSelection.Class
      Convex.MockChain.CoinSelection
      Convex.MockChain.Staking
      Convex.Query
      Convex.UTxOCompatibility
    hs-source-dirs: lib
    build-depends:
      aeson,
      base >= 4.14.0,
      containers >= 0.6.5,
      exceptions,
      lens,
      contra-tracer,
      convex-mockchain,
      convex-base,
      convex-optics,
      convex-wallet,
      data-default,
      servant-client,
      text

    -- cardano dependencies
    build-depends:
      cardano-api,
      cardano-ledger-core -any,
      cardano-ledger-conway,
      cardano-ledger-shelley,
      cardano-slotting,
      transformers,
      mtl

test-suite convex-coin-selection-test
  import: lang
  type: exitcode-stdio-1.0
  hs-source-dirs:     test
  ghc-options: -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-specialise
  main-is:
    Spec.hs
  other-modules:
    Scripts
    Scripts.MatchingIndex
  build-depends:
    base >= 4.14.0,
    tasty,
    tasty-hunit,
    tasty-quickcheck,
    QuickCheck,
    lens,
    cardano-ledger-api,
    cardano-ledger-alonzo,
    cardano-ledger-babbage,
    cardano-ledger-shelley,
    convex-coin-selection,
    convex-mockchain,
    convex-base,
    convex-optics,
    convex-wallet,
    cardano-api,
    containers,
    plutus-ledger-api:{plutus-ledger-api, plutus-ledger-api-testlib},
    plutus-ledger-api,
    plutus-tx,
    plutus-tx-plugin,
    mtl,
    transformers
