cabal-version: 3.0
name:          convex-coin-selection
version:       0.3.0.0
synopsis:      Coin selection algorithm for Cardano transactions
license:       Apache-2.0
license-files: LICENSE
maintainer:    j-mueller@users.noreply.github.com
author:        Jann Müller
homepage:      https://github.com/j-mueller/sc-tools
bug-reports:   https://github.com/j-mueller/sc-tools
description:
  Please see the README on GitHub at <https://github.com/j-mueller/sc-tools>

build-type:    Simple

common lang
  default-language:   Haskell2010
  default-extensions:
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    ExplicitForAll
    FlexibleContexts
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    MultiParamTypeClasses
    NumericUnderscores
    ScopedTypeVariables
    StandaloneDeriving

  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wunused-packages
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities

library
  import:          lang
  exposed-modules:
    Convex.CoinSelection
    Convex.CoinSelection.Class
    Convex.MockChain.CoinSelection
    Convex.MockChain.Staking
    Convex.Query
    Convex.UTxOCompatibility

  hs-source-dirs:  lib
  build-depends:
    , aeson
    , base              >=4.14.0
    , containers        >=0.6.5
    , contra-tracer
    , convex-base
    , convex-mockchain
    , convex-optics
    , convex-wallet
    , data-default
    , exceptions
    , lens
    , primitive
    , servant-client
    , text

  -- cardano dependencies
  build-depends:
    , cardano-api
    , cardano-ledger-core
    , cardano-ledger-shelley
    , cardano-slotting
    , mtl
    , transformers

test-suite convex-coin-selection-test
  import:         lang
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  ghc-options:
    -fobject-code -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas -fno-specialise -Wno-unused-packages

  main-is:        Spec.hs
  other-modules:
    Scripts
    Scripts.MatchingIndex

  build-depends:
    , base                                         >=4.14.0
    , cardano-api
    , cardano-ledger-api
    , cardano-ledger-conway
    , cardano-ledger-shelley
    , containers
    , convex-base
    , convex-coin-selection
    , convex-mockchain
    , convex-optics
    , convex-wallet
    , lens
    , mtl
    , plutus-ledger-api
    , plutus-ledger-api:plutus-ledger-api-testlib
    , plutus-tx
    , plutus-tx-plugin
    , QuickCheck
    , tasty
    , tasty-hunit
    , tasty-quickcheck
