cabal-version: 3.0
name:          convex-devnet
version:       0.3.0.0
synopsis:      Devnet for integration tests
license: Apache-2.0
license-files:
  LICENSE

maintainer:    j-mueller@users.noreply.github.com
author:        Jann Müller
homepage:      https://github.com/j-mueller/sc-tools
bug-reports:   https://github.com/j-mueller/sc-tools
description:
  Please see the README on GitHub at <https://github.com/j-mueller/sc-tools>

build-type:    Simple
data-files:
  config/credentials/faucet.sk
  config/credentials/faucet.vk
  config/devnet/byron-delegate.key
  config/devnet/byron-delegation.cert
  config/devnet/cardano-node.json
  config/devnet/genesis-alonzo.json
  config/devnet/genesis-byron.json
  config/devnet/genesis-conway.json
  config/devnet/genesis-shelley.json
  config/devnet/kes.skey
  config/devnet/opcert.cert
  config/devnet/vrf.skey

common lang
    default-language: Haskell2010
    default-extensions: ExplicitForAll ScopedTypeVariables MultiParamTypeClasses
                        DeriveGeneric StandaloneDeriving DeriveLift FlexibleContexts
                        GeneralizedNewtypeDeriving DeriveFunctor DeriveFoldable
                        DeriveTraversable ImportQualifiedPost NumericUnderscores
    ghc-options: -Wall -Wnoncanonical-monad-instances -Wunused-packages
                 -Wincomplete-uni-patterns -Wincomplete-record-updates
                 -Wredundant-constraints -Widentities

library
    import: lang
    exposed-modules:
      Convex.Devnet.CardanoNode
      Convex.Devnet.Logging
      Convex.Devnet.NodeQueries
      Convex.Devnet.Utils
      Convex.Devnet.Wallet
      Convex.Devnet.WalletServer
    hs-source-dirs: lib
    build-depends:
      base >= 4.14.0
      , aeson
      , text
      , time
      , bytestring
      , directory
      , filepath
      , process
      , HUnit
      , temporary
      , async
      , unix
      , exceptions
      , containers
      , convex-wallet
      , convex-base
      , convex-coin-selection
      , lens
      , mtl
      , stm
      , si-timers
      , prettyprinter
      , http-client
      , servant-client
      , servant-client-core

      -- cardano-node deps.
      , cardano-api
      , cardano-ledger-core
      , cardano-ledger-alonzo
      , cardano-ledger-conway
      , cardano-ledger-shelley
      , cardano-slotting
      , io-classes
      , ouroboros-consensus
      , ouroboros-consensus-cardano
      , ouroboros-network-protocols

      -- logging
      , contra-tracer
      , iohk-monitoring

  other-modules:
    Paths_convex_devnet
  autogen-modules:
    Paths_convex_devnet

test-suite convex-devnet-test
  import: lang
  type:   exitcode-stdio-1.0
  main-is: Spec.hs
  ghc-options: -threaded -rtsopts
  other-modules:
  hs-source-dirs:
    test
  build-depends:
    base >= 4.14.0
    , tasty
    , tasty-hunit
    , convex-devnet
    , convex-base
    , cardano-api
    , mtl
    , aeson
