cabal-version: 3.0
name:          convex-devnet
version:       0.3.0.0
synopsis:      Devnet for integration tests
license:       Apache-2.0
license-files: LICENSE
maintainer:    j-mueller@users.noreply.github.com
author:        Jann Müller
homepage:      https://github.com/j-mueller/sc-tools
bug-reports:   https://github.com/j-mueller/sc-tools
description:
  Please see the README on GitHub at <https://github.com/j-mueller/sc-tools>

build-type:    Simple
data-files:
  config/credentials/faucet.sk
  config/credentials/faucet.vk
  config/devnet/byron-delegate.key
  config/devnet/byron-delegation.cert
  config/devnet/cardano-node.json
  config/devnet/genesis-alonzo.json
  config/devnet/genesis-byron.json
  config/devnet/genesis-conway.json
  config/devnet/genesis-shelley.json
  config/devnet/kes.skey
  config/devnet/opcert.cert
  config/devnet/vrf.skey

common lang
  default-language:   Haskell2010
  default-extensions:
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    ExplicitForAll
    FlexibleContexts
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    MultiParamTypeClasses
    NumericUnderscores
    ScopedTypeVariables
    StandaloneDeriving

  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wunused-packages
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities

library
  import:          lang
  exposed-modules:
    Convex.Devnet.CardanoNode
    Convex.Devnet.CardanoNode.Types
    Convex.Devnet.Logging
    Convex.Devnet.Utils
    Convex.Devnet.Wallet
    Convex.Devnet.WalletServer

  hs-source-dirs:  lib
  build-depends:
    , aeson
    , async
    , base                         >=4.14.0
    , bytestring
    , cardano-api
    , cardano-ledger-conway
    , cardano-ledger-core
    , cardano-ledger-shelley
    , cardano-slotting
    , contra-tracer
    , convex-base
    , convex-coin-selection
    , convex-optics
    , convex-wallet
    , directory
    , filepath
    , http-client
    , HUnit
    , io-classes
    , iohk-monitoring
    , lens
    , mtl
    , ouroboros-consensus-cardano
    , prettyprinter
    , process
    , servant-client
    , servant-client-core
    , si-timers
    , stm
    , temporary
    , text
    , time
    , unix

  -- cardano-node deps.
  -- logging
  other-modules:   Paths_convex_devnet
  autogen-modules: Paths_convex_devnet

test-suite convex-devnet-test
  import:         lang
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs
  ghc-options:    -threaded -rtsopts
  other-modules:
    Devnet.Test.LatestEraTransitionSpec
    Devnet.Test.LatestEraTransitionSpec.PV2
    Devnet.Test.LatestEraTransitionSpec.PV3

  hs-source-dirs: test
  build-depends:
    , convex-base
    , convex-coin-selection
    , convex-devnet
    , convex-mockchain
    , convex-node-client
    , convex-wallet

  build-depends:
    , cardano-api
    , cardano-ledger-api
    , cardano-ledger-core
    , ouroboros-consensus-cardano
    , ouroboros-consensus-protocol
    , plutus-core
    , plutus-tx
    , plutus-tx-plugin

  build-depends:
    , aeson
    , base           >=4.14.0
    , containers
    , contra-tracer
    , filepath
    , lens
    , mtl
    , tasty
    , tasty-hunit
