cabal-version: 3.0
name:          convex-maestro
version:       0.3.0.0
synopsis:      Maestro backend for @MonadBlockchain@
license:       Apache-2.0
license-files: LICENSE
maintainer:    j-mueller@users.noreply.github.com
author:        Jann Müller
homepage:      https://github.com/j-mueller/sc-tools
bug-reports:   https://github.com/j-mueller/sc-tools
description:
  Please see the README on GitHub at <https://github.com/j-mueller/sc-tools>

build-type:    Simple

common lang
  default-language:   Haskell2010
  default-extensions:
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    ExplicitForAll
    FlexibleContexts
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    MultiParamTypeClasses
    NumericUnderscores
    ScopedTypeVariables
    StandaloneDeriving

  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wunused-packages
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities

library
  import:          lang
  hs-source-dirs:  lib
  exposed-modules:
    Convex.Maestro
    Convex.Maestro.MonadBlockchain
    Convex.Maestro.Orphans
    Convex.Maestro.Types

  build-depends:
    , base                         >=4.14 && <5
    , base16-bytestring
    , bech32
    , bytestring
    , cardano-api
    , cardano-binary
    , cardano-ledger-alonzo
    , cardano-ledger-babbage
    , cardano-ledger-binary
    , cardano-ledger-conway
    , cardano-ledger-core
    , cardano-slotting
    , containers
    , convex-base
    , convex-optics
    , lens
    , maestro-sdk
    , mtl
    , ouroboros-consensus
    , ouroboros-consensus-cardano
    , ouroboros-network-api
    , safe-money
    , servant-client
    , sop-extras
    , streaming
    , text
    , time
    , transformers

test-suite convex-maestro-test
  import:         lang
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Spec.hs
  other-modules:  Unit
  build-depends:
    , base            >=4.14.0
    , cardano-api
    , containers
    , convex-maestro
    , maestro-sdk
    , safe-money
    , tasty
    , tasty-hunit
