cabal-version: 3.0
name:          convex-mockchain
version:       0.0.1
synopsis:      Minimal mockchain for testing plutus scripts
license: Apache-2.0
license-files:
  LICENSE

maintainer:    j-mueller@users.noreply.github.com
author:        Jann Müller
homepage:      https://github.com/cardano-convex/sc-tools
bug-reports:   https://github.com/cardano-convex/sc-tools
description:
  Please see the README on GitHub at <https://github.com/cardano-convex/sc-tools>

build-type:    Simple

common lang
    default-language: Haskell2010
    default-extensions: ExplicitForAll ScopedTypeVariables MultiParamTypeClasses
                        DeriveGeneric StandaloneDeriving DeriveLift FlexibleContexts
                        GeneralizedNewtypeDeriving DeriveFunctor DeriveFoldable
                        DeriveTraversable ImportQualifiedPost
    ghc-options: -Wall -Wnoncanonical-monad-instances -Wunused-packages
                 -Wincomplete-uni-patterns -Wincomplete-record-updates
                 -Wredundant-constraints -Widentities

library
    import: lang
    exposed-modules:
      Convex.MockChain.Defaults
      Convex.MockChain.Utils
      Convex.MockChain
      Convex.NodeParams
    hs-source-dirs: lib
    build-depends:
      base >= 4.14.0,
      convex-base,
      convex-wallet,
      lens,
      containers,
      time,
      array,
      data-default,
      mtl,
      strict-containers,
      HUnit

    -- cardano dependencies
    build-depends:
      cardano-api >= 1.35.3,
      cardano-slotting -any,
      ouroboros-consensus -any,
      cardano-ledger-core -any,
      cardano-ledger-shelley -any,
      cardano-ledger-babbage -any,
      plutus-core -any,
      cardano-ledger-alonzo -any,
      cardano-ledger-shelley-ma -any
