cabal-version: 3.0
name:          convex-mockchain
version:       0.3.0.0
synopsis:      Minimal mockchain for testing plutus scripts
license: Apache-2.0
license-files:
  LICENSE

maintainer:    j-mueller@users.noreply.github.com
author:        Jann Müller
homepage:      https://github.com/j-mueller/sc-tools
bug-reports:   https://github.com/j-mueller/sc-tools
description:
  Please see the README on GitHub at <https://github.com/j-mueller/sc-tools>

build-type:    Simple

common lang
    default-language: Haskell2010
    default-extensions: ExplicitForAll ScopedTypeVariables MultiParamTypeClasses
                        DeriveGeneric StandaloneDeriving DeriveLift FlexibleContexts
                        GeneralizedNewtypeDeriving DeriveFunctor DeriveFoldable
                        DeriveTraversable ImportQualifiedPost NumericUnderscores
    ghc-options: -Wall -Wnoncanonical-monad-instances -Wunused-packages
                 -Wincomplete-uni-patterns -Wincomplete-record-updates
                 -Wredundant-constraints -Widentities

library
    import: lang
    exposed-modules:
      Convex.MockChain.Defaults
      Convex.MockChain.Gen
      Convex.MockChain.Utils
      Convex.MockChain
      Convex.NodeParams
    hs-source-dirs: lib
    build-depends:
      base >= 4.14.0,
      convex-base,
      convex-optics,
      convex-wallet,
      lens,
      containers,
      time,
      data-default,
      mtl,
      transformers,
      HUnit,
      QuickCheck,
      bytestring,
      sop-extras,
      strict-sop-core,
      sop-core

    -- cardano dependencies
    build-depends:
      cardano-api,
      cardano-ledger-babbage,
      cardano-ledger-conway,
      cardano-crypto-class >= 2.1.1.0,
      cardano-slotting -any,
      cardano-ledger-binary,
      ouroboros-consensus -any,
      ouroboros-consensus-cardano -any,
      cardano-ledger-core -any,
      cardano-ledger-shelley -any,
      cardano-ledger-alonzo -any,
      cardano-ledger-babbage -any,
      plutus-core -any,
      plutus-ledger-api -any,
