cabal-version: 3.0
name:          convex-mockchain
version:       0.3.0.0
synopsis:      Minimal mockchain for testing plutus scripts
license:       Apache-2.0
license-files: LICENSE
maintainer:    j-mueller@users.noreply.github.com
author:        Jann Müller
homepage:      https://github.com/j-mueller/sc-tools
bug-reports:   https://github.com/j-mueller/sc-tools
description:
  Please see the README on GitHub at <https://github.com/j-mueller/sc-tools>

build-type:    Simple

common lang
  default-language:   Haskell2010
  default-extensions:
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    ExplicitForAll
    FlexibleContexts
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    MultiParamTypeClasses
    NumericUnderscores
    ScopedTypeVariables
    StandaloneDeriving

  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wunused-packages
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities

library
  import:          lang
  exposed-modules:
    Convex.MockChain
    Convex.MockChain.Defaults
    Convex.MockChain.Gen
    Convex.MockChain.Utils

  hs-source-dirs:  lib
  build-depends:
    , base             >=4.14.0
    , bytestring
    , containers
    , convex-base
    , convex-optics
    , convex-wallet
    , data-default
    , HUnit
    , lens
    , mtl
    , primitive
    , QuickCheck
    , sop-core
    , sop-extras
    , strict-sop-core
    , time
    , transformers

  -- cardano dependencies
  build-depends:
    , cardano-api
    , cardano-crypto-class         >=2.1.1.0
    , cardano-ledger-alonzo
    , cardano-ledger-babbage
    , cardano-ledger-conway
    , cardano-ledger-core
    , cardano-ledger-shelley
    , cardano-slotting
    , ouroboros-consensus
    , ouroboros-consensus-cardano
    , plutus-core
    , plutus-ledger-api
