cabal-version: 3.0
name:          convex-muesli-node-client
version:       0.0.1
synopsis:      Muesli node clients
license: Apache-2.0
license-files:
  LICENSE

maintainer:    j-mueller@users.noreply.github.com
author:        Jann Müller
homepage:      https://github.com/cardano-convex/sc-tools
bug-reports:   https://github.com/cardano-convex/sc-tools
description:
  Please see the README on GitHub at <https://github.com/cardano-convex/sc-tools>

build-type:    Simple

common lang
    default-language: Haskell2010
    default-extensions: ExplicitForAll ScopedTypeVariables MultiParamTypeClasses
                        DeriveGeneric StandaloneDeriving DeriveLift FlexibleContexts
                        GeneralizedNewtypeDeriving DeriveFunctor DeriveFoldable
                        DeriveTraversable ImportQualifiedPost
    ghc-options: -Wall -Wnoncanonical-monad-instances -Wunused-packages
                 -Wincomplete-uni-patterns -Wincomplete-record-updates
                 -Wredundant-constraints -Widentities

library
    import: lang
    exposed-modules:
      Convex.Muesli.Orderbook.Cli
      Convex.Muesli.Orderbook.Cli.Command
      Convex.Muesli.Orderbook.Cli.Config
      Convex.Muesli.Orderbook.NodeClient
      Convex.Muesli.LP.Cli
      Convex.Muesli.LP.Cli.Command
      Convex.Muesli.LP.Cli.Config
      Convex.Muesli.LP.NodeClient
      Convex.Muesli.LP.Prices
      Convex.Muesli.LP.Stats
    hs-source-dirs: lib
    build-depends:
      base >= 4.14.0,
      text,
      containers,
      lens,
      convex-base,
      convex-node-client,
      convex-wallet,
      convex-muesli-core,
      transformers,
      optparse-applicative,
      mtl,
      validation,
      fingertree,
      strict-containers

    -- cardano dependencies
    build-depends:
      cardano-api >= 1.35.3

executable convex-muesli-node-client-orderbook
    import: lang
    main-is:          Main.hs
    build-depends:
        base ^>=4.14.3.0,
        convex-muesli-node-client
    hs-source-dirs:   app/orderbook
    default-language: Haskell2010
    ghc-options:
      -threaded -rtsopts -O2

executable convex-muesli-node-client-lp
    import: lang
    main-is:          Main.hs
    build-depends:
        base ^>=4.14.3.0,
        convex-muesli-node-client
    hs-source-dirs:   app/lp
    default-language: Haskell2010
    ghc-options:
      -threaded -rtsopts -O2